--- a/public/css/device.css
+++ b/public/css/device.css
@@ -121,3 +121,37 @@ td >.a1{
     width: 10px;
     
 }
+.graph{
+    position:sticky;
+    top:0px;
+    
+}
+.title{
+    position:sticky;
+    top:0px; 
+    
+    
+    
+}
+#container{
+    border-radius: 15px;
+}
+.graph{
+    background-color: #14148d ;
+    width: 800px;
+    height: fit-content;
+    border: 2px solid rgb(212, 206, 224); 
+    padding: 1% 1% 1% 1%;
+    margin-bottom: 1rem;
+    border-radius: 15px;
+    box-shadow: 5px 5px 5px 6px rgba(0, 0, 0, 0.651);
+}
+/*
+background-color:rgb(54, 21, 145);
+max-width: fit-content;
+padding: 2% 2% 2% 2%;
+border: 2px solid rgb(212, 206, 224); 
+border-radius: 20px;
+box-shadow: 5px 5px 5px 6px rgba(0, 0, 0, 0.37);
+margin-bottom: 1rem;
+height: fit-content;*/
