--- a/public/css/navigations_bar.css
+++ b/public/css/navigations_bar.css
@@ -3,6 +3,7 @@
   .topnav {
     overflow: hidden;
     background-color: #333;
+    height: 70px;
   }
   
   .topnav a {
@@ -11,15 +12,44 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 25px;
+
+    
   }
   
   .topnav a:hover {
     background-color: #ddd;
     color: black;
+    height: 70px;
   }
   
   .topnav a.active {
-    background-color: rgb(86, 40, 211);
+    background-color: rgb(216, 216, 216);
+    height: 70px;
     color: white;
   }
+  .topnav a.active:hover {
+    background-color: rgb(97, 96, 96);
+    color: black;
+    height: 70px;
+  }
+  .topnav a.active img{
+    width:140px;
+    
+  }
+
+  #username{
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 25px;
+  }
+  #username:hover{
+    background-color: rgb(97, 96, 96);
+    color: black;
+    height: 70px;
+  }
+
+  
