--- a/views/home_page.hbs
+++ b/views/home_page.hbs
@@ -13,13 +13,18 @@
       <link rel="stylesheet" href="/css/weight.css" />
       <link rel="stylesheet" href="/css/navigations_bar.css" />
       <script src="/leaflet.js"></script>
- 
- 
+    <!-- <script src="https://cdn.socket.io/3.1.3/socket.io.min.js" integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>-->
+         <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
+
+
+
   
  
     <title>OpenLayers example</title>
   </head>
   <body>
+    
       {{#if username}}
         
       <p style="display:none" id='1' class="check_if_signed"></p>
@@ -88,6 +93,8 @@
     {{/each}}
 </table>
 
+
+
 </div><!--
 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 <form action="/handle" method="post" target="dummyframe" </form>>
@@ -109,7 +116,15 @@
   
 
 <script >
+  const socketURL = 'http://localhost:8080'
+const socket = io();
+socket.on('message',(message)=>{
+  console.log('hello there')
+  console.log(message)
 
+})
+
+//const socket = io();
  //test
  //ΝΑ ΑΛΛΑΞΩ ΠΡΑΓΜΑΤΑ
 async function Refresh_page (pos) {
