--- a/views/devices.hbs
+++ b/views/devices.hbs
@@ -58,7 +58,14 @@
  <canvas id="myChart" class="div_map" ></canvas>  -->
  <div id="outer">
    <div class="graph">
-      <h4 class='title'>Device {{device}}</h4> 
+     <div style="display: flex;"> <h4 class='title' style="display:none;">{{device}}</h4><div class="dot" id="dbutton"><img  src="https://image.flaticon.com/icons/png/512/57/57085.png" class="down_btn"></div></div>
+     <div class="other_device">
+       <ul class="list_devices">
+        
+       </ul>
+     </div>
+
+      <hr style="background-color: antiquewhite;">
        <figure class="highcharts-figure">
         <div id="container"></div>
         <p class="highcharts-description">
@@ -119,7 +126,8 @@
 </div>
 </div>
 <script>
-async function name_devices (pos) {
+  
+async function name_devices () {
    fetch('/name_devices')
       .then( async (response) => {
 
@@ -133,7 +141,26 @@ async function name_devices (pos) {
          // Rest of status codes (400,500,303), can be handled here appropriately
         }
         console.log(data)
-        return data
+        var title=document.getElementsByClassName('title')[0].innerText
+        for(j=0;j<data.length;j++){
+          if(data[j].device_id==title){
+              document.getElementsByClassName('title')[0].innerText=data[j].device_name
+              document.getElementsByClassName('title')[0].style.display='block'
+          }
+        }
+        var ul=document.getElementsByClassName('list_devices')[0]
+        for(i=0;i<data.length;i++){
+          var li=document.createElement('li')
+          var a=document.createElement('a')
+          if(data[i].device_id!=title){
+            a.href=`/device/${data[i].device_id}`
+            a.innerText=data[i].device_name
+            a.id='list_a'
+            li.appendChild(a)
+            ul.appendChild(li)
+          }
+
+        }
 
       })
       .catch((err) => {
@@ -141,6 +168,23 @@ async function name_devices (pos) {
       })
      
 }
+name_devices()
+
+  function more_options(){
+    console.log('ww')
+    var div_dev=document.getElementsByClassName("other_device")
+    if(div_dev[0].style.display!='none'){
+      div_dev[0].style.display='none'
+    }
+    else{
+      div_dev[0].style.display='block'
+    }
+  }
+  var down_btn=document.getElementById('dbutton')
+  down_btn.onclick=more_options
+
+  
+
 
   function padTo2Digits(num) {
   return num.toString().padStart(2, '0');
@@ -444,4 +488,6 @@ new Chart("myChart",   {
   }
 }
 );//*/
+
+
 </script>
