--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,7 +2,7 @@
       <link rel="stylesheet" href="/css/register.css" />
 
 </head>
-{{#if username}}
+{{#if admin}}
 <div class="form">
 <form action="/Register_user" method="POST">
  
@@ -20,7 +20,7 @@
     <input type="email" placeholder="Enter Email" name="email" id="email" required>
 
       <label for="username"><b>Username</b></label>
-    <input type="username" placeholder="Enter Username" name="username" id="username" required>
+    <input type="text" placeholder="Enter Username" name="username" id="username1" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
