--- a/public/css/device.css
+++ b/public/css/device.css
@@ -124,8 +124,8 @@ td >.a1{
 }
 .down_btn{
     position: relative;
-    bottom:2px;
-    right: 1px;
+    bottom:4px;
+    right:10px;
     width: 50px; 
     height:50px;
 }
@@ -134,6 +134,8 @@ td >.a1{
     height: 45px;
     width: 45px;
     display:inline;
+    position: relative;
+    left: 10px;
     background-color: aliceblue;
     border-radius: 50%;
     
